Fix logo visiblility in mobile

--- a/src/css/_partial/header.styl
+++ b/src/css/_partial/header.styl
@@ -27,7 +27,8 @@
         height 60px
         border none
         opacity .9
-           
+        @media mq-mobile 
+            display none
 .header-menu
     text-align center 
     float right
